--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -266,14 +266,25 @@ input:focus{
 
 .up-down{
     width: 100%;
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
 
-.up-poke{
-    /* background-color: transparent; */
-    /* max-width: 0px; */
+.up-down .up-poke{
+    background-color: transparent;
     border-color: transparent;
     justify-content: center;
     color: white;
-    width: 5%;
+    display: inline-flex;
+    align-self: center;
+}
+
+.up-down .up-poke svg {
+    width: 50px;
+    height: 50px;
+}
+
+.up-down .up-poke:active{
+    color: #3e8e41;
+    transform: translateY(4px);
 }
